chat-icon changes

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="project-container">
                     <div class="project-box">
-                        <i class="fa-solid fa-cloud-sun-rain"></i>
+                        <i class="fa-brands fa-rocketchat"></i>
                         <h3>Chat App</h3>
                         <label><a style="text-decoration: none;" href="https://github.com/M-u-k-u-n-d/Chat-app"
                                 class="github-link" target="_blank">Project Link</a></label>
